--- a/house.gov.by/5bdaea91a3c0d6e18ed92838051a80b32621108b.yml
+++ b/house.gov.by/5bdaea91a3c0d6e18ed92838051a80b32621108b.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sat, 04 Nov 2017 16:40:27 GMT
+    - Sat, 04 Nov 2017 19:07:56 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,8 +29,6 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
-    Set-Cookie:
-    - PHPSESSID=1i6rfkjkpkqd3qf75919m899s4; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +40,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - HIT
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 04 Nov 2017 16:40:29 GMT
+recorded_at: Sat, 04 Nov 2017 19:07:56 GMT
