--- a/house.gov.by/778d300db4f1c8e9b4c35629d5885371d02152a7.yml
+++ b/house.gov.by/778d300db4f1c8e9b4c35629d5885371d02152a7.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sat, 04 Nov 2017 15:57:28 GMT
+    - Sat, 04 Nov 2017 19:10:17 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=cdvhgrgalsvcs90r3p3k4duq26; path=/
+    - PHPSESSID=iqr5fgqef3gktdke7bc5thvmj5; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 04 Nov 2017 15:57:29 GMT
+recorded_at: Sat, 04 Nov 2017 19:10:18 GMT
