--- a/house.gov.by/a5a73b7476d4a0a00805b19eabbfecbb25c828a5.yml
+++ b/house.gov.by/a5a73b7476d4a0a00805b19eabbfecbb25c828a5.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sat, 04 Nov 2017 17:40:03 GMT
+    - Sat, 04 Nov 2017 19:26:02 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,6 +29,8 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
+    Set-Cookie:
+    - PHPSESSID=l4sedmfj955dsb18gd4o70fgr0; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -40,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - HIT
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 04 Nov 2017 17:40:03 GMT
+recorded_at: Sat, 04 Nov 2017 19:26:03 GMT
