--- a/house.gov.by/5a4f6091558c47424aececa0159e0fca59f54d7a.yml
+++ b/house.gov.by/5a4f6091558c47424aececa0159e0fca59f54d7a.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sat, 04 Nov 2017 16:58:21 GMT
+    - Sat, 04 Nov 2017 19:27:45 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,8 +29,6 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
-    Set-Cookie:
-    - PHPSESSID=ipop016ekckbuq2e1c5hsdbcc5; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +40,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - HIT
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 04 Nov 2017 16:58:22 GMT
+recorded_at: Sat, 04 Nov 2017 19:27:45 GMT
