--- a/house.gov.by/e3f7e082dd2d8aad9dc8973f76eaa1ed72a5d856.yml
+++ b/house.gov.by/e3f7e082dd2d8aad9dc8973f76eaa1ed72a5d856.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sat, 04 Nov 2017 18:31:59 GMT
+    - Sat, 04 Nov 2017 19:35:52 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=3eb52g7p34s94pp4te6gbbn220; path=/
+    - PHPSESSID=2s0c5g0scmu6vg8fpvqv1k76c6; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 04 Nov 2017 18:32:00 GMT
+recorded_at: Sat, 04 Nov 2017 19:35:53 GMT
