--- a/house.gov.by/112adc08aa09be034f549c3a1c75bccb1324aeec.yml
+++ b/house.gov.by/112adc08aa09be034f549c3a1c75bccb1324aeec.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sat, 04 Nov 2017 17:54:01 GMT
+    - Sat, 04 Nov 2017 19:39:16 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,6 +29,8 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
+    Set-Cookie:
+    - PHPSESSID=7bgk83skoogek68523r2u5dob2; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -40,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - HIT
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 04 Nov 2017 17:54:01 GMT
+recorded_at: Sat, 04 Nov 2017 19:39:16 GMT
