--- a/house.gov.by/67efa9cb5fba22cc9416b37d8d064928422ac277.yml
+++ b/house.gov.by/67efa9cb5fba22cc9416b37d8d064928422ac277.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sat, 04 Nov 2017 18:14:24 GMT
+    - Sat, 04 Nov 2017 19:40:43 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,6 +29,8 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
+    Set-Cookie:
+    - PHPSESSID=p52dfkkt2rsag6d7rf3j6imeo7; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -40,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - HIT
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 04 Nov 2017 18:14:24 GMT
+recorded_at: Sat, 04 Nov 2017 19:40:44 GMT
