--- a/house.gov.by/6049a06ec51e0138b28b10654e9a14ef429857c6.yml
+++ b/house.gov.by/6049a06ec51e0138b28b10654e9a14ef429857c6.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sat, 04 Nov 2017 18:33:48 GMT
+    - Sat, 04 Nov 2017 19:44:41 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=gmf1756jaaltb7522duflf7k80; path=/
+    - PHPSESSID=qdo26dpbsr559651ajootlgfc0; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 04 Nov 2017 18:33:48 GMT
+recorded_at: Sat, 04 Nov 2017 19:44:42 GMT
