--- a/house.gov.by/46dfedc0d01f097096bf05cbbb3067cf518ec95c.yml
+++ b/house.gov.by/46dfedc0d01f097096bf05cbbb3067cf518ec95c.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sat, 04 Nov 2017 19:28:21 GMT
+    - Sat, 04 Nov 2017 19:47:25 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=cf5ue0gpq5cj3ngo4erueoj7f3; path=/
+    - PHPSESSID=iivbepv4n9k4gnq981ht2pbg24; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 04 Nov 2017 19:28:22 GMT
+recorded_at: Sat, 04 Nov 2017 19:47:25 GMT
