--- a/house.gov.by/0db15682979f7aca8a3ef53708295e151e7e663b.yml
+++ b/house.gov.by/0db15682979f7aca8a3ef53708295e151e7e663b.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sat, 04 Nov 2017 18:30:03 GMT
+    - Sat, 04 Nov 2017 20:00:11 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,6 +29,8 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
+    Set-Cookie:
+    - PHPSESSID=ofarig88jtmjg3j8ephqs62sk7; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -40,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - HIT
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 04 Nov 2017 18:30:03 GMT
+recorded_at: Sat, 04 Nov 2017 20:00:11 GMT
