--- a/house.gov.by/cc277f8d83c20d762a9925171dd9adadcb8ba0f8.yml
+++ b/house.gov.by/cc277f8d83c20d762a9925171dd9adadcb8ba0f8.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sat, 04 Nov 2017 19:21:15 GMT
+    - Sat, 04 Nov 2017 20:06:39 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=n9ts5am84e1t6qvcbc8pmsi505; path=/
+    - PHPSESSID=74hkoldud3ucnmrf4q1nfalao0; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 04 Nov 2017 19:21:16 GMT
+recorded_at: Sat, 04 Nov 2017 20:06:41 GMT
