--- a/house.gov.by/c8a6466616738a8a82294445713e18edbfc9d9d2.yml
+++ b/house.gov.by/c8a6466616738a8a82294445713e18edbfc9d9d2.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sat, 04 Nov 2017 18:51:33 GMT
+    - Sat, 04 Nov 2017 20:11:56 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=d8lokefcp39pmmuvq4la0n2jf2; path=/
+    - PHPSESSID=g62dn86ps9lp6nvgpaao2c9to3; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 04 Nov 2017 18:51:34 GMT
+recorded_at: Sat, 04 Nov 2017 20:11:56 GMT
