--- a/house.gov.by/8994cfb10119f6028c06e0f21a0c4d67f4f2ec14.yml
+++ b/house.gov.by/8994cfb10119f6028c06e0f21a0c4d67f4f2ec14.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sat, 04 Nov 2017 18:30:35 GMT
+    - Sat, 04 Nov 2017 20:22:24 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=84fqtq579nre7088q8sjc878s0; path=/
+    - PHPSESSID=d9edul83i8tg6of28uh11v2t70; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 04 Nov 2017 18:30:35 GMT
+recorded_at: Sat, 04 Nov 2017 20:22:25 GMT
