--- a/house.gov.by/d0a884277727eae17a1c4bd400cca7b7c6b0916d.yml
+++ b/house.gov.by/d0a884277727eae17a1c4bd400cca7b7c6b0916d.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sat, 04 Nov 2017 18:29:33 GMT
+    - Sat, 04 Nov 2017 20:40:16 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,6 +29,8 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
+    Set-Cookie:
+    - PHPSESSID=1sl2aupp4nd2pm45up5ct1kov5; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -40,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - HIT
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 04 Nov 2017 18:29:33 GMT
+recorded_at: Sat, 04 Nov 2017 20:40:16 GMT
