--- a/house.gov.by/6faca62c0613d3a29f1eeec515b433b3da10435f.yml
+++ b/house.gov.by/6faca62c0613d3a29f1eeec515b433b3da10435f.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sat, 04 Nov 2017 18:58:55 GMT
+    - Sat, 04 Nov 2017 20:43:30 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=al89jea3mi37mb2q8fm0v788f0; path=/
+    - PHPSESSID=1bm343u8hqfofhftjmfm9ltaq4; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 04 Nov 2017 18:58:56 GMT
+recorded_at: Sat, 04 Nov 2017 20:43:31 GMT
