--- a/house.gov.by/13c3f1d080bb7ffe4718e6690a60210f42f4effb.yml
+++ b/house.gov.by/13c3f1d080bb7ffe4718e6690a60210f42f4effb.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sat, 04 Nov 2017 19:49:23 GMT
+    - Sun, 05 Nov 2017 12:42:59 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=bb5bq711cd8jpfrii6rmnocof3; path=/
+    - PHPSESSID=vf9d5261em14n2unafnaul53e3; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 04 Nov 2017 19:49:24 GMT
+recorded_at: Sun, 05 Nov 2017 12:43:00 GMT
