--- a/house.gov.by/6b0e47221c93384e6c0ea49a44dac33611be5f06.yml
+++ b/house.gov.by/6b0e47221c93384e6c0ea49a44dac33611be5f06.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sat, 04 Nov 2017 20:24:50 GMT
+    - Sun, 05 Nov 2017 12:51:53 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=9u1nedc7lfgrtmo69a7fs761b1; path=/
+    - PHPSESSID=kbl04ig2kgqtg67h0kroopta21; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 04 Nov 2017 20:24:51 GMT
+recorded_at: Sun, 05 Nov 2017 12:51:54 GMT
