--- a/house.gov.by/3c84851aacd98293a2e688314ec0dc4e23fb97e1.yml
+++ b/house.gov.by/3c84851aacd98293a2e688314ec0dc4e23fb97e1.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sat, 04 Nov 2017 19:34:35 GMT
+    - Sun, 05 Nov 2017 12:53:14 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,8 +29,6 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
-    Set-Cookie:
-    - PHPSESSID=jractcg8aeele2c5fj6sk9nro2; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +40,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - HIT
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 04 Nov 2017 19:34:36 GMT
+recorded_at: Sun, 05 Nov 2017 12:53:14 GMT
