--- a/house.gov.by/f401899002fa995b931687935221e487c5c1b8fa.yml
+++ b/house.gov.by/f401899002fa995b931687935221e487c5c1b8fa.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sat, 04 Nov 2017 19:19:38 GMT
+    - Sun, 05 Nov 2017 12:55:19 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=nc5rg6h2pcrqgi2983r7mrcmu6; path=/
+    - PHPSESSID=is9bphabru04kvd3rns8pr5km6; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 04 Nov 2017 19:19:39 GMT
+recorded_at: Sun, 05 Nov 2017 12:55:20 GMT
