--- a/house.gov.by/1fb00ecebacfe149b89cb2bcda4bc3b123d0d075.yml
+++ b/house.gov.by/1fb00ecebacfe149b89cb2bcda4bc3b123d0d075.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sat, 04 Nov 2017 20:25:20 GMT
+    - Sun, 05 Nov 2017 13:15:47 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=0v6dqapv9g8mg0lq43fpnha6v0; path=/
+    - PHPSESSID=r1q7o0cue9u308g4eghd68ags3; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 04 Nov 2017 20:25:21 GMT
+recorded_at: Sun, 05 Nov 2017 13:15:48 GMT
